[gd_scene load_steps=7 format=3 uid="uid://3qi8m1jqrino"]

[ext_resource type="Texture2D" uid="uid://bd38e2ar0j8jt" path="res://icon.svg" id="1_vru3r"]
[ext_resource type="Script" path="res://Mort/mort_o_cycle.gd" id="1_x7gfg"]
[ext_resource type="Script" path="res://Mort/ScytheArea.gd" id="3_6c2rx"]
[ext_resource type="PackedScene" uid="uid://cdq0ql7bgtbmq" path="res://Mort/mort_rendere.tscn" id="4_ly27x"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jgv20"]
size = Vector2(190, 107)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_33n8q"]
size = Vector2(54, 107)

[node name="Mort-o-cycle" type="AnimatableBody2D"]
collision_mask = 6
sync_to_physics = false
script = ExtResource("1_x7gfg")
jumpForce = 15
normalGravity = -30.0
stoppingGravity = -100.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -0.5)
shape = SubResource("RectangleShape2D_jgv20")

[node name="Sprite2D" type="Sprite2D" parent="."]
visible = false
scale = Vector2(1.49414, 0.854874)
texture = ExtResource("1_vru3r")

[node name="AttackDuration" type="Timer" parent="."]
wait_time = 0.2

[node name="ScytheArea" type="Area2D" parent="."]
position = Vector2(128, 0)
collision_layer = 8
collision_mask = 8
script = ExtResource("3_6c2rx")

[node name="Collider" type="CollisionShape2D" parent="ScytheArea"]
shape = SubResource("RectangleShape2D_33n8q")
debug_color = Color(0.980392, 0, 0.368627, 0.419608)

[node name="MortRendere" parent="." instance=ExtResource("4_ly27x")]
position = Vector2(-10, -85)
scale = Vector2(0.539273, 0.539273)

[connection signal="startAttack" from="." to="MortRendere" method="_on_mortocycle_start_attack"]
[connection signal="startJump" from="." to="MortRendere" method="_on_mortocycle_start_jump"]
[connection signal="timeout" from="AttackDuration" to="." method="_on_attack_duration_timeout"]
